# jarvis

./: .gitignore  Dockerfile  Dockerfile.db  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_pgroonga_indexes_and_hybrid_search.py  b2c3d4e5f6a7_add_fragment_table.py  bdeaa9ae2598_initial_schema.py  c3d4e5f6a7b8_fix_fts_entity_name.py  d4e5f6a7b8c9_add_entity_community_id.py  e5f6a7b8c9d0_hybrid_search_v3.py  f6a7b8c9d0e1_add_last_accessed_at.py  g7b8c9d0e1f2_add_entity_aliases.py  h8c9d0e1f2a3_hybrid_search_v4.py  (+9 more)
backend/: .env.example  requirements.txt
docker/: init.sql
docs/: ACTIVE_ROADMAP.md  CLASSIFICATION_RULES.md  JARVIS_DEFINITIVE.md  RUNBOOK.md  VERIFIED_STATE_2026-05-07.md
frontend/: package-lock.json  package.json  vite.config.ts
memory/: decisions.md  session-state.md  work-log.md
scripts/: _backfill_ai_argos_cumulative.sql  ai_classify.py  ai_classify_sequence.py  classify_heuristic.py  classify_sample.py  cleanup_preserve.py  create-functions.sql  dump_jsonl_turns.py  final_verify.py  ingest_classify_one.py  ingest_jsonl_bulk.py  ingest_preprocessed_bulk.py  ingest_via_ai.py  ingest_via_ai_chunked.py  ingest_via_ai_per_turn.py  init-db.sql  p6_ai_argos_reprocess.sql  peek_episode.py  polish_batch5.sql  q_regression.py  qual_verify.py  reseed_from_extracted.py  sample_episodes.py  save_classify.py  smart_classify.py  test_phase2_dedup.py  test_reflect.py  test_retrieval.py  test_subjects.py  verify_engine.py  verify_mcp_tools.py
tests/: test_normalization.py  test_sanitizer_and_quality_gate.py
(+94 files in other folders)
