[project]
name = "jarvis"
version = "0.1.0"
description = "Cloud context server for AI memory"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "mcp>=1.26.0",
    "pgvector>=0.3.0",
    "sentence-transformers>=2.7.0",
    "onnxruntime>=1.20.0",
    "rapidfuzz>=3.9.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "anthropic>=1.0.0",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "T20"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "jarvis.cli"
disallow_untyped_decorators = false
